objects/SaiObj10__c.object
<CustomObject>
    <description>1</description>
    <fields>
        <fullName>DateField1__c</fullName>
        <label>DateField1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailField1__c</fullName>
        <description>Test</description>
        <label>EmailField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PhoneField__c</fullName>
        <description>111111</description>
        <label>PhoneField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PickListField1__c</fullName>
        <label>PickListField1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickListField2__c</fullName>
        <label>PickListField2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>SaiObj10</label>
    <nameField>
        <label>SaiObj10 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiObj10s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>